<resources>
    <string name="app_name">Curious</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="forgot_pass_btn_txt"><u> Forgot Password? </u></string>
    <string name="sign_up_with_google_btn_txt">SIGN UP WITH GOOGLE</string>
    <string name="sign_in_with_google_btn_txt">SIGN IN WITH GOOGLE</string>
    <string name="signin_or_signup_txt"><u> Sign In or Sign Up </u></string>
    <string name="email_txt">Email</string>
    <string name="name_txt">Name</string>
    <string name="username_txt">Username</string>
    <string name="pass_txt">Password</string>
    <string name="confirm_pass_txt">Confirm Password</string>
    <string name="profile_txt">Profile</string>
    <string name="voice_command_txt">Voice Command</string>
    <string name="home_txt">Home</string>
    <string name="todo_txt">Todo</string>
    <string name="journal_txt">Journal</string>
    <string name="wallet_txt">Wallet</string>
    <string name="reminder_txt">Reminder</string>
    <string name="settings_txt">Settings</string>
    <string name="about_txt">About</string>
    <string name="history_txt">History</string>
    <string name="sign_out_txt">Sign Out</string>
    <string name="profile_name_txt">Jarvis Bot</string>
    <string name="profile_email_txt">jarvis@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="date_txt">Date</string>
    <string name="time_txt">Time</string>
    <string name="profile_details_txt">Profile Details</string>
    <string name="settings_options_txt">Settings Options</string>
    <string name="settings_details_txt">Settings Details</string>
    <string name="reset_details_txt">Reset Details</string>
    <string name="set_new_password_txt">Set New Password</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="remind_me_txt">Remind Me</string>
    <string name="remind_date_time_txt"><![CDATA[Remind Date & Time]]></string>
    <string name="title_txt">Title</string>
    <string name="description_txt">Description</string>
    <string name="set_date_time_for_reminder_txt"><![CDATA[Set Date & Time for Reminder]]></string>
    <string name="at_txt">\@</string>
    <string name="cancel_txt"><u> Cancel </u></string>
    <string name="add_txt">Add</string>
    <string name="color_txt">Color</string>
    <string name="event_txt">Event</string>
    <string name="alarm_txt">Alarm</string>
    <string name="sample_txt">Sample</string>
    <string name="update_txt">Update</string>
    <string name="sync_txt">Sync</string>
    <string name="subscript">sub</string>
    <string name="superscript">sup</string>
    <string name="strikethrough">strike</string>
    <string name="heading1">h1</string>
    <string name="heading2">h2</string>
    <string name="heading3">h3</string>
    <string name="heading4">h4</string>
    <string name="heading5">h5</string>
    <string name="heading6">h6</string>
    <string name="ringing_txt">Ringing...</string>
    <string name="about_details_txt">hfdskfh</string>
    <string name="txt_saved">Saved</string>
    <string name="txt_articles">Articles</string>
    <string name="txt_article_body">
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
        Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles Articles
    </string>
    <string name="txt_view_article">View Article</string>
    <string name="txt_new_article">New Article</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_post">Post</string>
    <string name="txt_upload_article_cover">Upload Article Cover</string>
    <string name="txt_give_a_catchy_title">Give A Catchy Title</string>
    <string name="txt_write_your_article">Write Your Article</string>
    <string name="txt_click_on_the_image_to_edit">Click on the image to edit</string>
    <string name="txt_click_to_change">Click to Change</string>
    <string name="txt_more">More</string>
    <string name="txt_share_your_comment">Share Your Comment</string>
    <string name="txt_save">Save</string>
    <string name="txt_moderate">Moderate</string>
</resources>