<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/article_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ArticleView"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12.5">

        <include
            android:id="@+id/article_toolbar"
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11.5"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/article_cover"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/ic_load"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/article_date"
                        android:textSize="12sp"
                        android:textColor="@color/secondary_text"
                        android:text=""
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:id="@+id/article_title"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:text=""
                        android:gravity="center_vertical"
                        android:layout_gravity="left"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:id="@+id/article_author"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimary"
                        android:text=""
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:id="@+id/article_views"
                        android:textSize="12sp"
                        android:textColor="@color/secondary_text"
                        android:text=""
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginVertical="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/article_body"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimary"
                        android:text=""
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginVertical="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/secondary_text"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp">

                        <LinearLayout
                            android:id="@+id/article_like_clickable"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/article_like_image"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:src="@drawable/ic_like"/>

                            <TextView
                                android:id="@+id/article_like_count"
                                android:textSize="12sp"
                                android:textColor="@color/secondary_text"
                                android:text=""
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/article_comment_clickable"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/article_comment_image"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:src="@drawable/ic_comment"/>

                            <TextView
                                android:id="@+id/article_comment_count"
                                android:textSize="12sp"
                                android:textColor="@color/secondary_text"
                                android:text=""
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/article_save_clickable"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/article_save_image"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:src="@drawable/ic_save"/>

                            <TextView
                                android:id="@+id/article_save_text"
                                android:textSize="12sp"
                                android:textColor="@color/secondary_text"
                                android:text="@string/txt_save"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/secondary_text"/>

                    <LinearLayout
                        android:id="@+id/article_comment_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_comment_item"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:paddingVertical="10dp">

                            <TextView
                                android:layout_marginTop="10dp"
                                android:id="@+id/article_comment_user"
                                android:textSize="14sp"
                                android:textColor="@color/secondary_text_dark"
                                android:text="Yamin Rupom"
                                android:gravity="center_vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:minHeight="40dp">

                                <EditText
                                    android:id="@+id/article_comment_body"
                                    android:textSize="12sp"
                                    android:textColor="@color/secondary_text_dark"
                                    android:text="@string/txt_share_your_comment"
                                    android:gravity="top"
                                    android:layout_width="0dp"
                                    android:layout_weight="6"
                                    android:layout_height="wrap_content"
                                    android:minHeight="35dp"
                                    android:textCursorDrawable="@color/secondary_text_dark"
                                    android:background="@drawable/shape_line_rectangle" />

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="0.5"/>

                                <com.kusu.loadingbutton.LoadingButton
                                    android:id="@+id/article_comment_post_loading"
                                    android:layout_width="0dp"
                                    android:layout_weight="2"
                                    android:layout_height="35dp"
                                    android:background="@drawable/button_black_round"
                                    android:textColor="@color/colorAccent"
                                    app:lb_buttonColor="@color/colorPrimary"
                                    app:lb_loaderColor="@color/colorAccent"
                                    android:clickable="false"
                                    app:lb_isLoading="true"
                                    android:visibility="gone"/>

                                <Button
                                    android:id="@+id/article_comment_post"
                                    android:layout_width="0dp"
                                    android:layout_weight="2"
                                    android:layout_height="35dp"
                                    android:background="@drawable/button_secondary_round"
                                    android:textColor="@color/colorAccent"
                                    android:text="@string/txt_post"
                                    android:visibility="visible"/>

                            </LinearLayout>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/article_comments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>